--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,28 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": [{
-        "name": "Launch",
-        "type": "go",
-        "request": "launch",
-        "mode": "debug",
-        "program": "${workspaceFolder}/cmd/web/main.go",
-        "env": {},
-        "args": []
-  }]
+  "configurations": [
+    {
+      "name": "Launch",
+      "type": "go",
+      "request": "launch",
+      "mode": "debug",
+      "program": "${workspaceFolder}/main.go",
+      "env": {},
+      "args": []
+    },
+    {
+      "name": "Test",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "remotePath": "",
+      "port": 2345,
+      "host": "127.0.0.1",
+      "program": "${file}",
+      "env": {},
+      "args": [],
+      "showLog": true
+    }
+  ]
 }
