--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "mode": "debug",
       "program": "${workspaceFolder}/main.go",
       "env": {},
-      "args": []
+      "args": ["-update", "n"]
     },
     {
       "name": "Test",
